Fixing studio page: not showing 'create song' prompt to non-signed in users

--- a/app/components/studio-page/studio-page.component.scss
+++ b/app/components/studio-page/studio-page.component.scss
@@ -10,13 +10,18 @@ h1 {
 }
 
 .register-prompt-block {
-  text-align: center;
-  line-height: 1.5em;
-  padding: 20px;
+  display: flex;
+  justify-content: center;
   margin-top: 20px;
   margin-bottom: 20px;
-  border: solid 1px #ccc;
-  background-color: #fefbf7;
+
+  .register-prompt-block-content {
+    text-align: center;
+    line-height: 1.5em;
+    padding: 20px;
+    border: solid 1px #ccc;
+    background-color: #fefbf7;
+  }
 }
 
 .collection-block {
@@ -35,7 +40,11 @@ h1 {
 @media only screen and (min-width: $min-desktop-width) {
   .register-prompt-block {
     margin-top: 40px;
-    min-width: 700px;
+
+    .register-prompt-block-content {
+      min-width: 700px;
+      max-width: 1000px;
+    }
   }
 
   .add-song-block {
